@@ -89,7 +89,7 @@ public class TestJsonLoaderStorage {
     "\"g\":\"abc\"," +
     "\"h\":\"def\"," +
     "\"i\":123456789," +
-    "\"j\":1234.6789," +
+    "\"j\":\"1234.6789\"," +
     "\"k\":{\"a\":\"ghi\"}," +
     "\"l\":{\"a\":123}," +
     "\"m\":[{\"a\":123},{\"a\":456},{\"a\":789}]" +
